--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,7 @@ RewriteEngine on
 
 RewriteRule ^registro registro.php
 RewriteRule ^iniciar iniciar.php
+RewriteRule ^contacto contacto.php
+RewriteRule ^agregar agregar.php
+
+RewriteRule ^user/perfil user/perfil.php
